manifests/04-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: taskapp
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taskapp
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: backend
      containers:
        - name: backend
          image: ghcr.io/voddy001/taskapp-backend:v0.1.0
          ports:
            - containerPort: 5000
          startupProbe:
            httpGet:
              path: /api/health
              port: 5000
            failureThreshold: 10
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/health/ready
              port: 5000
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
